--- a/package.json
+++ b/package.json
@@ -18,5 +18,10 @@
     "react-dom": "18.2.0",
     "react-qr-code": "^2.0.11",
     "typescript": "^4.9.5"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.7"
   }
 }
