--- a/firebase.json
+++ b/firebase.json
@@ -16,6 +16,11 @@
         "source": "/api/image-preview",
         "function": "imagePreview",
         "region": "us-central1"
+      },
+      {
+        "source": "/api/v1{,/**}",
+        "function": "apiV1",
+        "region": "europe-west6"
       }
     ],
     "headers": [
