--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "firebase-admin": "^11.4.1",
+    "i18next": "^22.4.10",
     "next": "^13.2.1",
+    "next-i18next": "^13.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
+    "react-i18next": "^12.2.0",
     "react-qr-code": "^2.0.11",
     "sharp": "^0.32.1",
     "typescript": "^4.9.5"
@@ -24,6 +27,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.7"
+    "tailwindcss": "^3.2.7",
+    "@next/swc-darwin-arm64": "^13.4.2"
   }
 }
