--- a/firebase.json
+++ b/firebase.json
@@ -6,6 +6,9 @@
       "**/.*",
       "**/node_modules/**"
     ],
+    "frameworksBackend": {
+      "region": "europe-west6"
+    },
     "rewrites": [
       {
         "source": "/api/v1{,/**}",
