--- a/package.json
+++ b/package.json
@@ -9,6 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.4",
+    "@heroicons/react": "^2.0.13",
+    "cloudinary": "^1.32.0",
+    "eslint-config-next": "^13.0.1",
+    "framer-motion": "^7.6.4",
+    "imagemin": "^8.0.1",
+    "imagemin-jpegtran": "^7.0.0",
+    "react-hooks-global-state": "^2.0.0",
+    "react-swipeable": "^7.0.0",
+    "react-use-keypress": "^1.3.1",
     "@types/node": "^18.14.1",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
