--- a/package.json
+++ b/package.json
@@ -11,33 +11,33 @@
   "dependencies": {
     "@headlessui/react": "^1.7.4",
     "@heroicons/react": "^2.0.13",
-    "cloudinary": "^1.32.0",
-    "eslint-config-next": "^13.0.1",
-    "framer-motion": "^7.6.4",
-    "imagemin": "^8.0.1",
-    "imagemin-jpegtran": "^7.0.0",
-    "react-hooks-global-state": "^2.0.0",
-    "react-swipeable": "^7.0.0",
-    "react-use-keypress": "^1.3.1",
     "@types/node": "^18.14.1",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "cloudinary": "^1.32.0",
+    "eslint-config-next": "^14.1.0",
     "firebase-admin": "^11.4.1",
+    "framer-motion": "^7.6.4",
     "i18next": "^22.4.10",
-    "next": "^13.2.1",
+    "imagemin": "^8.0.1",
+    "imagemin-jpegtran": "^7.0.0",
+    "next": "^14.1.0",
     "next-i18next": "^13.2.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-icons": "^4.8.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hooks-global-state": "^2.0.0",
     "react-i18next": "^12.2.0",
+    "react-icons": "^4.8.0",
     "react-qr-code": "^2.0.11",
+    "react-swipeable": "^7.0.0",
+    "react-use-keypress": "^1.3.1",
     "sharp": "^0.32.1",
     "typescript": "^4.9.5"
   },
   "devDependencies": {
+    "@next/swc-darwin-arm64": "^13.4.2",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.7",
-    "@next/swc-darwin-arm64": "^13.4.2"
+    "tailwindcss": "^3.2.7"
   }
 }
