--- a/package.json
+++ b/package.json
@@ -11,10 +11,6 @@
   "dependencies": {
     "@headlessui/react": "^1.7.4",
     "@heroicons/react": "^2.0.13",
-    "@types/node": "^18.14.1",
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
-    "cloudinary": "^1.32.0",
     "eslint-config-next": "^14.1.0",
     "firebase-admin": "^11.4.1",
     "framer-motion": "^7.6.4",
@@ -36,6 +32,10 @@
   },
   "devDependencies": {
     "@next/swc-darwin-arm64": "^13.4.2",
+    "@types/node": "18.11.9",
+    "@types/react": "^18.2.8",
+    "@types/react-dom": "^18.2.19",
+    "@types/react-router-dom": "^5.3.3",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7"
