--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^1.7.4",
     "@heroicons/react": "^2.0.13",
     "eslint-config-next": "^14.1.0",
+    "firebase": "^10.8.0",
     "firebase-admin": "^11.4.1",
     "framer-motion": "^7.6.4",
     "i18next": "^22.4.10",
@@ -21,6 +22,7 @@
     "next-i18next": "^13.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.50.1",
     "react-hooks-global-state": "^2.0.0",
     "react-i18next": "^12.2.0",
     "react-icons": "^4.8.0",
@@ -31,7 +33,6 @@
     "typescript": "^4.9.5"
   },
   "devDependencies": {
-    "@next/swc-darwin-arm64": "^13.4.2",
     "@types/node": "18.11.9",
     "@types/react": "^18.2.8",
     "@types/react-dom": "^18.2.19",
